--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -12,7 +12,7 @@
 
 // 1. Colours
 // ---------
-$black: #0a0a0a;
+$black: #30383d;
 $white: #ffffff;
 $light-grey: #f8f8f8;
 $medium-grey: #cacaca;
@@ -23,7 +23,7 @@ $secondary-colour: #b1c6db;
 $body-background: #f3f3f3;
 $container-background: $white;
 
-$global-font-colour: #1c3160;
+$global-font-colour: #30383d;
 $link-colour: $global-font-colour;
 
 $phone-number: #1b3160;  // mix up between this and link colour in html?? so need to check b4 replacing
@@ -46,6 +46,7 @@ $global-breakpoint-secondary: ;
 // 2.1 Padding
 // -----------
 
+$logo-padding: 20px 35px 20px 35px;
 $header-padding: 5px 0 15px 0;
 $global-module-padding: 25px 35px 25px 35px;
 $global-paragraph-padding: 6px 0 6px 0;
@@ -70,9 +71,9 @@ $global-font-weight: 300;
 $global-heading-font-weight: 600;
 
 $h1-font-family: $global-font-family;
-$h1-font-size: 30px;
-$h1-line-height: 34px;
-$h1-colour: $white;
+$h1-font-size: 31px;
+$h1-line-height: 36px;
+$h1-colour: $black;
 $h1-font-weight: 600;
 // $h1-margin-bottom: 10px;
 
@@ -111,14 +112,15 @@ $footer-font-weight: $global-font-weight;
 $button-font-size: 14px;
 $button-line-height: 14px;
 $button-text-colour: $white;
-$button-font-weight: bold;
+$button-font-weight: normal;
 $button-margin: 0 0 $global-margin 0;
-$button-colour: #ca445c;
+$button-colour: #5cb85c;
 $button-border: 2px solid $button-colour;
 $button-radius: 4px;
 $button-rounded: $global-rounded;
 $button-padding: 0px 40px 0;
 $button-padding-mob: 14px 0 11px;
+$button-letter-spacing: 2px;
 
 // 5. Debug
 // ---------
