--- a/src/scss/partials/_reset.scss
+++ b/src/scss/partials/_reset.scss
@@ -44,3 +44,11 @@ a[href^="tel"], a[href^="sms"] {
 	pointer-events: auto;
 	cursor: default;
 }
+.button{
+	  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+ -webkit-box-shadow: 0px 1px 5px rgba(50, 50, 50, 0.5);
+ -moz-box-shadow:  0px 1px 5px rgba(50, 50, 50, 0.5);
+  box-shadow:  0px 1px 5px rgba(50, 50, 50, 0.5);
+}
