--- a/src/scss/partials/optionals/_button.scss
+++ b/src/scss/partials/optionals/_button.scss
@@ -12,4 +12,5 @@ padding: $button-padding;
 color: $button-text-colour;
 font-weight: $button-font-weight;
 text-decoration: none;
+ letter-spacing: $button-letter-spacing;
 }
