--- a/src/templates/macros/1upbox-macro.html
+++ b/src/templates/macros/1upbox-macro.html
@@ -1,118 +1,28 @@
 {% macro declare(moduleData) -%}
                 <!-- Secondary Module start -->
-
-                <!-- arrow_paleblue start -->
                 <tr>
-                    <td class="arrow_paleblue" align="center" bgcolor="#b1c6db" style="padding: 0; font-size: 1px; lineheight: 1px;"><img src="http://res.cloudinary.com/dagb1l62t/image/upload/v1469468976/test/tesco/arrow_paleblue.gif" alt="" width="44" height="16" style="border: 0; display: block; height: auto; line-height: 100%; outline: none; text-decoration: none;"></td>
+                    <td class="full-width-image" align="left" valign="top" style="padding:0"><img src="https://firebasestorage.googleapis.com/v0/b/ngdataformdemo.appspot.com/o/black-border.png?alt=media&token=007a07aa-9803-4170-a523-b6ce64637a53" alt="" width="100%" height="auto" style="border: 0; display: block; height: auto; line-height: 100%; max-width: 600px; outline: none; text-decoration: none; width: 100%;"></td>
                 </tr>
-                <!-- arrow_paleblue end -->
-
-
-
                 <!-- Wrapper start -->
                 <tr>
-                    <td class="one-column" style="padding:20px 0 40px;font_size:0" bgcolor="#b1c6db" align="center" valign="top">
-
-                        <table border="0" cellspacing="0" cellpadding="0" bgcolor="#b1c6db" width="88%" align="center" style="color: #1c3160; font-family: sans-serif;">
-                            <!-- wrapper top row start -->
-                            <tr>
-                                <td align="left" class="nomob" style="font-size:1px; line-height: 1px;" valign="top"><img alt="" width="3" height="3" src="http://res.cloudinary.com/dagb1l62t/image/upload/v1469468978/test/tesco/bluebox_topleft.gif" style="border: 0; display: block; height: auto; line-height: 100%; outline: none; text-decoration: none;"></td>
-
-                                <td align="center" bgcolor="#ffffff" class="nomob" height="3" style="font-size:1px; line-height:1px;" width="100%"></td>
-
-                                <td align="right" class="nomob" style="font-size:1px; line-height: 1px;" valign="top"><img alt="" width="3" height="3" src="http://res.cloudinary.com/dagb1l62t/image/upload/v1469468977/test/tesco/bluebox_topright.gif" style="border: 0; display: block; height: auto; line-height: 100%; outline: none; text-decoration: none;"></td>
-                            </tr>
-                        </table>
-                        <!-- wrapper top row end -->
+                    <td class="one-column" style="padding:0 0 0;font_size:0" bgcolor="#30383d" align="center" valign="top">
                         <!-- wrapper content row start -->
-                        <table border="0" cellspacing="0" cellpadding="0" bgcolor="#b1c6db" width="88%" align="center" style="color: #1c3160; font-family: sans-serif;">
+                        <table border="0" cellspacing="0" cellpadding="0" bgcolor="#30383d" width="100%" align="center" style="color: #1c3160; font-family: sans-serif;">
+                              <!-- campaign builder banner start -->
                             <tr>
-                                <td bgcolor="#9AACBF" class="nomob" valign="top" width="1"></td>
-                                <td bgcolor="#ffffff" class="nomob" valign="top" width="2"></td>
-
-                                <!-- wrapper content container start -->
-                                <td align="center" class="table corners" style="background-color:#ffffff" valign="middle" width="100%">
-
-                                    <!-- inner content container table start -->
-                                    <table align="center" border="0" cellpadding="0" cellspacing="0" width="90%" bgcolor="#ffffff" style="color: #1c3160; font-family: sans-serif;">
-
-                                        <!--  content start -->
-
-
-
-                                        <!-- Secondary start -->
-                                        <tr>
-                                            <td class="one-column module-outer" valign="top" bgcolor="#ffffff" style="background-color: #ffffff; padding: 25px 35px 25px 35px;">
-                                                <table border="0" cellspacing="0" cellpadding="0" width="100%" style="color: #1c3160; font-family: sans-serif;">
-                                                    <tr>
-                                                    <td  align="center" style="text-align:center; font-size: 21px; line-height: 25px; font-weight: bold; font-family:Verdana, Geneva, sans-serif; color:#1b3160; padding-bottom:5px" valign="top">Activate your card</td>
-                                                  </tr>
-                                                  <tr>
-                                                    <td  align="center" style="text-align:center; font-size: 25px; line-height: 28px; font-weight: bold; font-family:Verdana, Geneva, sans-serif; color:#1b3160;padding-bottom:10px" valign="top"><a href="tel:03450729072" style="color: #1b3160; text-decoration: none;" target="_blank" DoNotReport="true">0345&nbsp;072&nbsp;9072*</a></td>
-                                                  </tr>
-                                                  <tr>
-                                                    <td align="center" style="text-align:center; font-size: 13px; line-height: 17px; font-weight: normal; font-family:Verdana, Geneva, sans-serif; color:#1b3160;" valign="top"><img style="display:inline-block" src="http://img.ed4.net/tpf/2015_Q4/Tesco_Bank_PROJ_2015Q3_ClubCardWelcome/minicom-icon.gif" alt="" width="11" height="11" /> Minicom 0345 671 0676*</td>
-                                                  </tr>
-
-                                                </table>
-                                            </td>
-                                        </tr>
-
-                                        <!-- Secondary end -->
-
-
-
-                                       
-                                        <!--  content end -->
-                                    </table>
-                                    <!-- inner content container table end -->
-
-                                </td>
-                                <!-- wrapper content container end -->
-                                <td bgcolor="#ffffff" class="nomob" valign="top" width="2"></td>
-                                <td bgcolor="#9AACBF" class="nomob" valign="top" width="1"></td>
+                                <td class="full-width-image" align="center" valign="top" style="padding:0"><a href="http://www.tescobank.com/personal/finance/home.html" target="_blank" style="color: #1c3160; text-decoration: underline;"><img src="https://firebasestorage.googleapis.com/v0/b/ngdataformdemo.appspot.com/o/campaign-builder2.gif?alt=media&token=5557925c-eb55-41a8-8f62-7eb0ebdc16b9" alt="" width="100%" height="auto" style="border: 0; display: block; height: auto; line-height: 100%; max-width: 500px; outline: none; text-decoration: none; width: 100%;"></a></td>
                             </tr>
+                             <!-- campaign builder banner end -->
+
                         </table>
                         <!-- wrapper content row end -->
-                        <!-- wrapper bottom row (with rowspan) start -->
-                        <table border="0" cellspacing="0" cellpadding="0" bgcolor="#b1c6db" width="88%" align="center" style="color: #1c3160; font-family: sans-serif;">
-                            <tr>
-                                <td align="left" class="nomob" style="font-size:1px; line-height: 1px;" valign="top"><img alt="" height="4" src="http://res.cloudinary.com/dagb1l62t/image/upload/v1469468978/test/tesco/bluebox_bottomleft.gif" width="3" style="border: 0; display: block; height: auto; line-height: 100%; outline: none; text-decoration: none;"></td>
-
-                                <td bgcolor="#ffffff" class="nomob" style="font-size:1px; line-height:0px;" width="100%">
-                                    <table border="0" cellspacing="0" cellpadding="0" bgcolor="#ffffff" width="100%" align="center" style="color: #1c3160; font-family: sans-serif;">
-                                        <tr>
-                                            <td bgcolor="#ffffff" class="nomob" height="2" style="font-size:1px; line-height:0px;">
-                                                <font style="display:none;">&nbsp;</font>
-                                            </td>
-                                        </tr>
-
-                                        <tr>
-                                            <td bgcolor="#6C7885" class="nomob" height="1" style="font-size:1px; line-height:0px;">
-                                                <font style="display:none;">&nbsp;</font>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td bgcolor="#9AACBF" class="nomob" height="1" style="font-size:1px; line-height:0px;">
-                                                <font style="display:none;">&nbsp;</font>
-                                            </td>
-                                        </tr>
-                                    </table>
-                                </td>
-
-                                <td align="right" class="nomob" style="font-size:1px; line-height: 1px;" valign="top"><img alt="" height="4" src="http://res.cloudinary.com/dagb1l62t/image/upload/v1469468977/test/tesco/bluebox_bottomright.gif" width="3" style="border: 0; display: block; height: auto; line-height: 100%; outline: none; text-decoration: none;"></td>
-                            </tr>
-                        </table>
-                        <!-- wrapper bottom row (with rowspan) end -->
+                       
                     </td>
                 </tr>
                 <!-- Wrapper end -->
-
-                 <!-- arrow_paleblue start -->
                 <tr>
-                    <td class="arrow_paleblue_inv" align="center" bgcolor="#ffffff" style="padding: 0; font-size: 1px; lineheight: 1px;"><img src="https://firebasestorage.googleapis.com/v0/b/ngdataformdemo.appspot.com/o/arrow_paleblue_inv.gif?alt=media&token=73e30c5c-8f4b-4495-ab3a-73a65ca2875b" alt="" width="44" height="16" style="border: 0; display: block; height: auto; line-height: 100%; outline: none; text-decoration: none;"></td>
+                    <td class="full-width-image" align="left" valign="top" style="padding:0"><img src="https://firebasestorage.googleapis.com/v0/b/ngdataformdemo.appspot.com/o/black-border.png?alt=media&token=007a07aa-9803-4170-a523-b6ce64637a53" alt="" width="100%" height="auto" style="border: 0; display: block; height: auto; line-height: 100%; max-width: 600px; outline: none; text-decoration: none; width: 100%;"></td>
                 </tr>
-                <!-- arrow_paleblue end -->
                 
                 <!-- Secondary Module end -->
 {% endmacro %}
