--- a/src/templates/modules/logo.html
+++ b/src/templates/modules/logo.html
@@ -1,28 +1,35 @@
 
 <!-- logo start -->
-{% if logo.type == 'credit' %}
+{% if logo.type == 'supernova' %}
     <tr>
-    <td class="logo module-outer"  align="left" valign="top" bgcolor="{{containerBackground}}">
+    <td class="logo"  align="left" valign="top" bgcolor="#30383d">
         <table border="0" cellspacing="0" cellpadding="0">
              <tr>
-                <td align="left" valign="top"><a href="{{logo.href}}" target="_blank"><img src="https://firebasestorage.googleapis.com/v0/b/ngdataformdemo.appspot.com/o/uploads%2Flogo-tesco-bank-credit-cards.gif?alt=media&token=d0f5116f-eb65-4fb7-874f-f2dee946a0e0" alt="{{logo.alt}}" width="276" height="auto" /></a></td>
+                <td align="left" valign="top"><a href="{{logo.href}}" target="_blank"><img src="https://firebasestorage.googleapis.com/v0/b/ngdataformdemo.appspot.com/o/nova-logo.png?alt=media&token=f70514ca-3c3f-4410-ab85-e98d6f1bcf26" alt="{{logo.alt}}" width="217" height="auto" /></a></td>
             </tr>
         </table>
     </td>
 </tr>
 {% endif %}
-{% if logo.type == 'club' %}
+{% if logo.type == 'builder' %}
     <tr>
-    <td class="logo module-outer"  align="left" valign="top" bgcolor="{{containerBackground}}">
+    <td class="logo"  align="left" valign="top" bgcolor="#30383d">
         <table border="0" cellspacing="0" cellpadding="0">
              <tr>
-                <td align="left" valign="top"><a href="{{logo.href}}" target="_blank"><img src="https://firebasestorage.googleapis.com/v0/b/ngdataformdemo.appspot.com/o/uploads%2Flogo-tesco-bank-clubcard-credit-cards.png?alt=media&token=dfcd800c-d3af-4c63-bfa4-5ba7e35e88a0" alt="{{logo.alt}}" width="276" height="auto" /></a></td>
+                <td align="left" valign="top"><a href="{{logo.href}}" target="_blank"><img src="https://firebasestorage.googleapis.com/v0/b/ngdataformdemo.appspot.com/o/builder-logo.png?alt=media&token=76718a1f-7c96-4b66-a6d7-af51f1cc0f54" alt="{{logo.alt}}" width="217" height="auto" /></a></td>
             </tr>
         </table>
     </td>
 </tr>
 {% endif %}
 
+
+
+<!-- divider start -->
+   <tr>
+        <td class="full-width-image" align="left" valign="top" style="padding:0"><img src="https://firebasestorage.googleapis.com/v0/b/ngdataformdemo.appspot.com/o/black-border.png?alt=media&token=007a07aa-9803-4170-a523-b6ce64637a53" alt="" width="100%" height="auto" style="border: 0; display: block; height: auto; line-height: 100%; max-width: 600px; outline: none; text-decoration: none; width: 100%;"></td>
+                </tr>
+<!-- divider end -->
 <!-- logo end -->
 
 
