--- a/src/templates/macros/1upbox-macro.html
+++ b/src/templates/macros/1upbox-macro.html
@@ -10,7 +10,7 @@
                         <table border="0" cellspacing="0" cellpadding="0" bgcolor="#30383d" width="100%" align="center" style="color: #1c3160; font-family: sans-serif;">
                               <!-- campaign builder banner start -->
                             <tr>
-                                <td class="full-width-image" align="center" valign="top" style="padding:0"><a href="http://www.tescobank.com/personal/finance/home.html" target="_blank" style="color: #1c3160; text-decoration: underline;"><img src="https://firebasestorage.googleapis.com/v0/b/ngdataformdemo.appspot.com/o/campaign-builder2.gif?alt=media&token=5557925c-eb55-41a8-8f62-7eb0ebdc16b9" alt="" width="100%" height="auto" style="border: 0; display: block; height: auto; line-height: 100%; max-width: 500px; outline: none; text-decoration: none; width: 100%;"></a></td>
+                                <td class="full-width-image" align="center" valign="top" style="padding:0"><a href="https://github.com/fivedoor/fivedoor-email-build-framework" target="_blank" style="color: #1c3160; text-decoration: underline;"><img src="https://firebasestorage.googleapis.com/v0/b/ngdataformdemo.appspot.com/o/campaign-builder2.gif?alt=media&token=5557925c-eb55-41a8-8f62-7eb0ebdc16b9" alt="" width="100%" height="auto" style="border: 0; display: block; height: auto; line-height: 100%; max-width: 500px; outline: none; text-decoration: none; width: 100%;"></a></td>
                             </tr>
                              <!-- campaign builder banner end -->
 
