--- a/src/templates/macros/1upbox-macro.html
+++ b/src/templates/macros/1upbox-macro.html
@@ -1,16 +1,16 @@
 {% macro declare(moduleData) -%}
                 <!-- Secondary Module start -->
                 <tr>
-                    <td class="full-width-image" align="left" valign="top" style="padding:0"><img src="https://firebasestorage.googleapis.com/v0/b/ngdataformdemo.appspot.com/o/black-border.png?alt=media&token=007a07aa-9803-4170-a523-b6ce64637a53" alt="" width="100%" height="auto" style="border: 0; display: block; height: auto; line-height: 100%; max-width: 600px; outline: none; text-decoration: none; width: 100%;"></td>
+                    <td class="full-width-image" align="left" valign="top" style="padding:0"><img src="https://firebasestorage.googleapis.com/v0/b/ngdataformdemo.appspot.com/o/divider-bw.png?alt=media&token=208f130d-1510-47b5-b329-4641cbc3222e" alt="" width="100%" height="auto" style="border: 0; display: block; height: auto; line-height: 100%; max-width: 600px; outline: none; text-decoration: none; width: 100%;"></td>
                 </tr>
                 <!-- Wrapper start -->
                 <tr>
-                    <td class="one-column" style="padding:0 0 0;font_size:0" bgcolor="#30383d" align="center" valign="top">
+                    <td class="one-column" style="padding:0 0 0;font_size:0" bgcolor="#21a543" align="center" valign="top">
                         <!-- wrapper content row start -->
-                        <table border="0" cellspacing="0" cellpadding="0" bgcolor="#30383d" width="100%" align="center" style="color: #1c3160; font-family: sans-serif;">
+                        <table border="0" cellspacing="0" cellpadding="0" bgcolor="#21a543" width="100%" align="center" style="color: #1c3160; font-family: sans-serif;">
                               <!-- campaign builder banner start -->
                             <tr>
-                                <td class="full-width-image" align="center" valign="top" style="padding:0"><a href="https://github.com/fivedoor/fivedoor-email-build-framework" target="_blank" style="color: #1c3160; text-decoration: underline;"><img src="https://firebasestorage.googleapis.com/v0/b/ngdataformdemo.appspot.com/o/campaign-builder2.gif?alt=media&token=5557925c-eb55-41a8-8f62-7eb0ebdc16b9" alt="" width="100%" height="auto" style="border: 0; display: block; height: auto; line-height: 100%; max-width: 500px; outline: none; text-decoration: none; width: 100%;"></a></td>
+                                <td class="full-width-image" align="center" valign="top" style="padding:0"><a href="https://github.com/fivedoor/fivedoor-email-build-framework" target="_blank" style="color: #1c3160; text-decoration: underline;"><img src="https://firebasestorage.googleapis.com/v0/b/ngdataformdemo.appspot.com/o/reg_banner_hi-1.gif?alt=media&token=d987ddce-a589-4a1d-8e51-8b98068500dd" alt="" width="100%" height="auto" style="border: 0; display: block; height: auto; line-height: 100%; max-width: 500px; outline: none; text-decoration: none; width: 100%;"></a></td>
                             </tr>
                              <!-- campaign builder banner end -->
 
@@ -21,7 +21,7 @@
                 </tr>
                 <!-- Wrapper end -->
                 <tr>
-                    <td class="full-width-image" align="left" valign="top" style="padding:0"><img src="https://firebasestorage.googleapis.com/v0/b/ngdataformdemo.appspot.com/o/black-border.png?alt=media&token=007a07aa-9803-4170-a523-b6ce64637a53" alt="" width="100%" height="auto" style="border: 0; display: block; height: auto; line-height: 100%; max-width: 600px; outline: none; text-decoration: none; width: 100%;"></td>
+                    <td class="full-width-image" align="left" valign="top" style="padding:0"><img src="https://firebasestorage.googleapis.com/v0/b/ngdataformdemo.appspot.com/o/divider-bw.png?alt=media&token=208f130d-1510-47b5-b329-4641cbc3222e" alt="" width="100%" height="auto" style="border: 0; display: block; height: auto; line-height: 100%; max-width: 600px; outline: none; text-decoration: none; width: 100%;"></td>
                 </tr>
                 
                 <!-- Secondary Module end -->
